# open-captcha

./: Cargo.toml  package-lock.json
models/: untitled.mtl
src/: main.rs  renderer.rs  server.rs
src/background/: generate.rs  mod.rs
src/filters/: fgsm.rs  mod.rs
src/rendering/: drawing.rs  gl.rs  mod.rs  render.rs  render.rs.slower.txt  shaders.rs
src/ui/render_window/: render_window.rs
src/ui/render_window/render_config/: render_config.rs
