[package]
name = "open-captcha"
version = "0.0.0"
description = "Rust implementation of Tiny Renderer"
authors = ["Reece Harris <me@reeceharris.net>", "Emmanuel Bustos <ema2159@gmail.com>"]
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
image = "0.25.5"
obj-rs = "0.7.4"
nalgebra = "0.33.2"
rayon = "1.8"
parking_lot = "0.12"
wide = "0.7.32"