[package]
name = "open_captcha"
version = "0.0.0"
description = "Rust implementation of Tiny Renderer"
authors = ["Reece Harris <me@reeceharris.net>", "Emmanuel Bustos <ema2159@gmail.com>"]
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
image = "0.25.5"
obj-rs = "0.7.4"
nalgebra = "0.33.2"
cgmath = "0.18.0"
rand = "0.8.5"
ndarray = "0.16.1"